Fix related posts misalignment

--- a/components/FeaturedPosts/FeaturedPosts.module.css
+++ b/components/FeaturedPosts/FeaturedPosts.module.css
@@ -10,7 +10,7 @@
 
 .blogPosts .featuredPosts {
     display: flex;
-    gap: 1.5rem;
+    gap: 2rem;
     margin-bottom: 2rem;
 }
 
