--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,52 +1,3 @@
 .home {
     padding: 8rem 2rem 3rem 2rem;
 }
-
-.home .search {
-    max-width: 500px;
-    margin: auto;
-    margin-bottom: 1rem;
-    background-color: var(--border);
-    border: 1px solid rgba(231, 231, 231, .5);
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    padding: .2rem;
-    border-radius: .5rem;
-    -webkit-border-radius: .5rem;
-    -moz-border-radius: .5rem;
-    -ms-border-radius: .5rem;
-    -o-border-radius: .5rem;
-}
-
-.home .search i {
-    color: rgba(231, 231, 231, .7);
-    margin-left: .5rem;
-    font-size: 1rem;
-}
-
-.home .search .searchInput {
-    background-color: var(--border);
-    border: none;
-    padding: .5rem;
-    width: 100%;
-    outline-width: 0;
-    font-size: 1.1rem;
-    color: var(--text-main);
-    opacity: .8;
-    font-weight: 400;
-    letter-spacing: 1.2px;
-}
-
-.home .search .searchInput:active, 
-.home .search .searchInput:focus, 
-.home .search .searchInput:visited, 
-.home .search .searchInput:target, 
-.home .search .searchInput:enabled {
-    background-color: var(--border);
-    color: var(--text-main);
-}
-
-.home .search .searchInput i {
-    color: var(--text-main);
-}
