--- a/styles/globals.css
+++ b/styles/globals.css
@@ -58,6 +58,9 @@ h1, h2, h3, h4, h5, h6, p, button, a, span {
 
 .section-header {
   margin-bottom: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .section-header .heading {
@@ -77,7 +80,7 @@ h1, h2, h3, h4, h5, h6, p, button, a, span {
 }
 
 .section-header a {
-  color: var(--link);
+  color: var(--text-main);
   font-size: 1.4rem;
   font-weight: 500;
   transition: all .5s ease;
